test_case/rust-lang_rust/59120_472141042_1.rs
\n\nPlease be sure that a file corresponding to the module exists. If you\nwant to use a module named `file_that_doesnt_exist`, you need to have a file\nnamed `file_that_doesnt_exist.rs` or `file_that_doesnt_exist/mod.rs` in the\nsame directory.\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/issues/issue-56411.rs","byte_start":336,"byte_end":351,"line_start":15,"line_end":15,"column_start":9,"column_end":24,"is_primary":true,"text":[{"text":"import!(issue_56411_aux);","highlight_start":9,"highlight_end":24}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"name the file either issue_56411_aux.rs or issue_56411_aux/mod.rs inside the directory \"/checkout/src/test/ui/issues\"","code":null,"level":"help","spans":[],"children":[],"rendered":null}],"rendered":"error[E0583]: file not found for module `issue_56411_aux`\n  --> /checkout/src/test/ui/issues/issue-56411.rs:15:9\n   |\nLL | import!(issue_56411_aux);\n   |         ^^^^^^^^^^^^^^^\n   |\n   = help: name the file either issue_56411_aux.rs or issue_56411_aux/mod.rs inside the directory \"/checkout/src/test/ui/issues\"\n\n"}
[01:13:33] {"message":"For more information about this error, try `rustc --explain E0583`.","code":null,"level":"","spans":[],"children":[],"rendered":"For more information about this error, try `rustc --explain E0583`.\n"}
[01:13:33] 
[01:13:33] ------------------------------------------
[01:13:33] 
---
[01:13:33] 54 error: unused doc comment
[01:13:33] -   --> $DIR/useless_comment.rs:28:5
[01:13:33] +   --> $DIR/useless-comment.rs:28:5
[01:13:33] 56    |
[01:13:33] 57 LL |     #[doc = "foo"]
[01:13:33] 
[01:13:33] 61    |     - rustdoc does not generate documentation for expressions
[01:13:33] 62 
[01:13:33] 63 error: unused doc comment
[01:13:33] 63 error: unused doc comment
[01:13:33] -   --> $DIR/useless_comment.rs:29:5
[01:13:33] +   --> $DIR/useless-comment.rs:29:5
[01:13:33] 65    |
[01:13:33] 66 LL |     #[doc = "bar"]
[01:13:33] 
[01:13:33] 69    |     - rustdoc does not generate documentation for expressions
[01:13:33] 70 
[01:13:33] 71 error: unused doc comment
---
[01:13:33] 81 error: unused doc comment
[01:13:33] -   --> $DIR/useless_comment.rs:35:13
[01:13:33] +   --> $DIR/useless-comment.rs:35:13
[01:13:33] 83    |
[01:13:33] 84 LL |     let x = /** comment */ 47;
[01:13:33] 85    |             ^^^^^^^^^^^^^^ -- rustdoc does not generate documentation for expressions
[01:13:33] 86 
[01:13:33] 87 error: unused doc comment
[01:13:33] -   --> $DIR/useless_comment.rs:37:5
[01:13:33] +   --> $DIR/useless-comment.rs:37:5
[01:13:33] +   --> $DIR/useless-comment.rs:37:5
[01:13:33] 89    |
[01:13:33] 90 LL |       /// dox
[01:13:33] 91    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[01:13:33] 
[01:13:33] 
[01:13:33] The actual stderr differed from the expected stderr.
[01:13:33] Actual stderr saved to /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/useless-comment/useless-comment.stderr
[01:13:33] To update references, rerun the tests and pass the `--bless` flag
[01:13:33] To only update this specific test, also pass `--test-args useless-comment.rs`
[01:13:33] error: 1 errors occurred comparing output.
[01:13:33] status: exit code: 1
[01:13:33] status: exit code: 1
[01:13:33] command: "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/bin/rustc" "/checkout/src/test/ui/useless-comment.rs" "-Zthreads=1" "--target=x86_64-unknown-linux-gnu" "--error-format" "json" "-Zui-testing" "-C" "prefer-dynamic" "-o" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/useless-comment/a" "-Crpath" "-O" "-Zunstable-options" "-Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "-L" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/useless-comment/auxiliary" "-A" "unused"
[01:13:33] ------------------------------------------
[01:13:33] 
[01:13:33] ------------------------------------------
[01:13:33] stderr:
[01:13:33] stderr:
[01:13:33] ------------------------------------------
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":138,"byte_end":145,"line_start":10,"line_end":10,"column_start":1,"column_end":8,"is_primary":false,"text":[{"text":"mac!();","highlight_start":1,"highlight_end":8}],"label":"rustdoc does not generate documentation for macro expansions","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":101,"byte_end":137,"line_start":9,"line_end":9,"column_start":1,"column_end":37,"is_primary":true,"text":[{"text":"/// foo //~ ERROR unused doc comment","highlight_start":1,"highlight_end":37}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"lint level defined here","code":null,"level":"note","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":43,"byte_end":62,"line_start":3,"line_end":3,"column_start":9,"column_end":28,"is_primary":true,"text":[{"text":"#![deny(unused_doc_comments)]","highlight_start":9,"highlight_end":28}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":null},{"message":"to document an item produced by a macro, the macro must produce the documentation as part of its expansion","code":null,"level":"help","spans":[],"children":[],"rendered":null}],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:9:1\n   |\nLL | /// foo //~ ERROR unused doc comment\n   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nLL | mac!();\n   | ------- rustdoc does not generate documentation for macro expansions\n   |\nnote: lint level defined here\n  --> /checkout/src/test/ui/useless-comment.rs:3:9\n   |\nLL | #![deny(unused_doc_comments)]\n   |         ^^^^^^^^^^^^^^^^^^^\n   = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":201,"byte_end":212,"line_start":14,"line_end":14,"column_start":5,"column_end":16,"is_primary":false,"text":[{"text":"    let x = 12;","highlight_start":5,"highlight_end":16}],"label":"rustdoc does not generate documentation for statements","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":162,"byte_end":196,"line_start":13,"line_end":13,"column_start":5,"column_end":39,"is_primary":true,"text":[{"text":"    /// a //~ ERROR unused doc comment","highlight_start":5,"highlight_end":39}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:13:5\n   |\nLL |     /// a //~ ERROR unused doc comment\n   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nLL |     let x = 12;\n   |     ----------- rustdoc does not generate documentation for statements\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":303,"byte_end":394,"line_start":19,"line_end":23,"column_start":5,"column_end":6,"is_primary":false,"text":[{"text":"    match x {","highlight_start":5,"highlight_end":14},{"text":"        /// c //~ ERROR unused doc comment","highlight_start":1,"highlight_end":43},{"text":"        1 => {},","highlight_start":1,"highlight_end":17},{"text":"        _ => {}","highlight_start":1,"highlight_end":16},{"text":"    }","highlight_start":1,"highlight_end":6}],"label":"rustdoc does not generate documentation for expressions","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":218,"byte_end":298,"line_start":16,"line_end":18,"column_start":5,"column_end":23,"is_primary":true,"text":[{"text":"    /// multi-line //~ unused doc comment","highlight_start":5,"highlight_end":42},{"text":"    /// doc comment","highlight_start":1,"highlight_end":20},{"text":"    /// that is unused","highlight_start":1,"highlight_end":23}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:16:5\n   |\nLL | /     /// multi-line //~ unused doc comment\nLL | |     /// doc comment\nLL | |     /// that is unused\n   | |______________________^\nLL | /     match x {\nLL | |         /// c //~ ERROR unused doc comment\nLL | |         1 => {},\nLL | |         _ => {}\nLL | |     }\n   | |_____- rustdoc does not generate documentation for expressions\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":364,"byte_end":371,"line_start":21,"line_end":21,"column_start":9,"column_end":16,"is_primary":false,"text":[{"text":"        1 => {},","highlight_start":9,"highlight_end":16}],"label":"rustdoc does not generate documentation for match arms","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":321,"byte_end":355,"line_start":20,"line_end":20,"column_start":9,"column_end":43,"is_primary":true,"text":[{"text":"        /// c //~ ERROR unused doc comment","highlight_start":9,"highlight_end":43}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:20:9\n   |\nLL |         /// c //~ ERROR unused doc comment\n   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nLL |         1 => {},\n   |         ------- rustdoc does not generate documentation for match arms\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":441,"byte_end":450,"line_start":26,"line_end":26,"column_start":5,"column_end":14,"is_primary":false,"text":[{"text":"    unsafe {}","highlight_start":5,"highlight_end":14}],"label":"rustdoc does not generate documentation for expressions","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":400,"byte_end":436,"line_start":25,"line_end":25,"column_start":5,"column_end":41,"is_primary":true,"text":[{"text":"    /// foo //~ ERROR unused doc comment","highlight_start":5,"highlight_end":41}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:25:5\n   |\nLL |     /// foo //~ ERROR unused doc comment\n   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nLL |     unsafe {}\n   |     --------- rustdoc does not generate documentation for expressions\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":552,"byte_end":553,"line_start":30,"line_end":30,"column_start":5,"column_end":6,"is_primary":false,"text":[{"text":"    3;","highlight_start":5,"highlight_end":6}],"label":"rustdoc does not generate documentation for expressions","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":456,"byte_end":470,"line_start":28,"line_end":28,"column_start":5,"column_end":19,"is_primary":true,"text":[{"text":"    #[doc = \"foo\"] //~ ERROR unused doc comment","highlight_start":5,"highlight_end":19}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:28:5\n   |\nLL |     #[doc = \"foo\"] //~ ERROR unused doc comment\n   |     ^^^^^^^^^^^^^^\nLL |     #[doc = \"bar\"] //~ ERROR unused doc comment\nLL |     3;\n   |     - rustdoc does not generate documentation for expressions\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":552,"byte_end":553,"line_start":30,"line_end":30,"column_start":5,"column_end":6,"is_primary":false,"text":[{"text":"    3;","highlight_start":5,"highlight_end":6}],"label":"rustdoc does not generate documentation for expressions","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":504,"byte_end":518,"line_start":29,"line_end":29,"column_start":5,"column_end":19,"is_primary":true,"text":[{"text":"    #[doc = \"bar\"] //~ ERROR unused doc comment","highlight_start":5,"highlight_end":19}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:29:5\n   |\nLL |     #[doc = \"bar\"] //~ ERROR unused doc comment\n   |     ^^^^^^^^^^^^^^\nLL |     3;\n   |     - rustdoc does not generate documentation for expressions\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":601,"byte_end":608,"line_start":33,"line_end":33,"column_start":5,"column_end":12,"is_primary":false,"text":[{"text":"    mac!();","highlight_start":5,"highlight_end":12}],"label":"rustdoc does not generate documentation for macro expansions","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":560,"byte_end":596,"line_start":32,"line_end":32,"column_start":5,"column_end":41,"is_primary":true,"text":[{"text":"    /// bar //~ ERROR unused doc comment","highlight_start":5,"highlight_end":41}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"to document an item produced by a macro, the macro must produce the documentation as part of its expansion","code":null,"level":"help","spans":[],"children":[],"rendered":null}],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:32:5\n   |\nLL |     /// bar //~ ERROR unused doc comment\n   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nLL |     mac!();\n   |     ------- rustdoc does not generate documentation for macro expansions\n   |\n   = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":637,"byte_end":639,"line_start":35,"line_end":35,"column_start":28,"column_end":30,"is_primary":false,"text":[{"text":"    let x = /** comment */ 47; //~ ERROR unused doc comment","highlight_start":28,"highlight_end":30}],"label":"rustdoc does not generate documentation for expressions","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":622,"byte_end":636,"line_start":35,"line_end":35,"column_start":13,"column_end":27,"is_primary":true,"text":[{"text":"    let x = /** comment */ 47; //~ ERROR unused doc comment","highlight_start":13,"highlight_end":27}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:35:13\n   |\nLL |     let x = /** comment */ 47; //~ ERROR unused doc comment\n   |             ^^^^^^^^^^^^^^ -- rustdoc does not generate documentation for expressions\n\n"}
[01:13:33] {"message":"unused doc comment","code":{"code":"unused_doc_comments","explanation":null},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":716,"byte_end":724,"line_start":38,"line_end":40,"column_start":5,"column_end":6,"is_primary":false,"text":[{"text":"    {","highlight_start":5,"highlight_end":6},{"text":"","highlight_start":1,"highlight_end":1},{"text":"    }","highlight_start":1,"highlight_end":6}],"label":"rustdoc does not generate documentation for expressions","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/useless-comment.rs","byte_start":675,"byte_end":711,"line_start":37,"line_end":37,"column_start":5,"column_end":41,"is_primary":true,"text":[{"text":"    /// dox //~ ERROR unused doc comment","highlight_start":5,"highlight_end":41}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: unused doc comment\n  --> /checkout/src/test/ui/useless-comment.rs:37:5\n   |\nLL |       /// dox //~ ERROR unused doc comment\n   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nLL | /     {\nLL | |\nLL | |     }\n   | |_____- rustdoc does not generate documentation for expressions\n\n"}
[01:13:33] 
[01:13:33] ------------------------------------------
[01:13:33] 
[01:13:33] thread '[ui] ui/useless-comment.rs' panicked at 'explicit panic', src/tools/compiletest/src/runtest.rs:3301:9
---
[01:13:33] 
[01:13:33] thread 'main' panicked at 'Some tests failed', src/tools/compiletest/src/main.rs:496:22
[01:13:33] 
[01:13:33] 
[01:13:33] command did not execute successfully: "/checkout/obj/build/x86_64-unknown-linux-gnu/stage0-tools-bin/compiletest" "--compile-lib-path" "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/lib" "--run-lib-path" "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/lib/rustlib/x86_64-unknown-linux-gnu/lib" "--rustc-path" "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/bin/rustc" "--src-base" "/checkout/src/test/ui" "--build-base" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui" "--stage-id" "stage2-x86_64-unknown-linux-gnu" "--mode" "ui" "--target" "x86_64-unknown-linux-gnu" "--host" "x86_64-unknown-linux-gnu" "--llvm-filecheck" "/usr/lib/llvm-6.0/bin/FileCheck" "--host-rustcflags" "-Crpath -O -Zunstable-options  -Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "--target-rustcflags" "-Crpath -O -Zunstable-options  -Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "--docck-python" "/usr/bin/python2.7" "--lldb-python" "/usr/bin/python2.7" "--gdb" "/usr/bin/gdb" "--quiet" "--llvm-version" "6.0.0\n" "--system-llvm" "--cc" "" "--cxx" "" "--cflags" "" "--llvm-components" "" "--llvm-cxxflags" "" "--adb-path" "adb" "--adb-test-dir" "/data/tmp/work" "--android-cross-path" "" "--color" "always"
[01:13:33] 
[01:13:33] 
[01:13:33] failed to run: /checkout/obj/build/bootstrap/debug/bootstrap test
[01:13:33] Build completed unsuccessfully in 0:04:18
[01:13:33] Build completed unsuccessfully in 0:04:18
[01:13:33] Makefile:48: recipe for target 'check' failed
[01:13:33] make: *** [check] Error 1
The command "stamp sh -x -c "$RUN_SCRIPT"" exited with 2.
travis_time:start:0423adc8
$ date && (curl -fs --head https://google.com | grep ^Date: | sed 's/Date: //g' || true)
Tue Mar 12 19:09:04 UTC 2019
Tue Mar 12 19:09:04 UTC 2019
Tue, 12 Mar 2019 19:09:04 GMT
travis_time:end:0423adc8:start=1552417744271401236,finish=1552417744440791502,duration=169390266
The command "date && (curl -fs --head https://google.com | grep ^Date: | sed 's/Date: //g' || true)
" exited with 0.
travis_fold:start:after_failure.1
tstrap/debug/incremental/bootstrap-5f86g9tk67ex/s-faa8wmxmhr-1fl2x2g-1qbirucj30d8p
138800 ./obj/build/x86_64-unknown-linux-gnu/stage0-rustc/x86_64-unknown-linux-gnu/release
138588 ./obj/build/x86_64-unknown-linux-gnu/stage0-bootstrap-tools/release
135920 ./obj/build/x86_64-unknown-linux-gnu/stage0-rustc/x86_64-unknown-linux-gnu/release/deps
123628 ./src/llvm-project/llvm/test/CodeGen
